Dodanie białych obrysów kwadratom

--- a/build-Gra-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/Makefile
+++ b/build-Gra-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/Makefile
@@ -55,7 +55,8 @@ SOURCES       = ..\Gra\main.cpp
 OBJECTS       = main.o
 
 DIST          =  ksztalt.hpp \
-		kwadrat.hpp ..\Gra\main.cpp
+		kwadrat.hpp \
+		ustalone.hpp ..\Gra\main.cpp
 QMAKE_TARGET  = Gra
 DESTDIR        =  #avoid trailing-slash linebreak
 TARGET         = Gra.exe
@@ -520,7 +521,8 @@ main.o: ../Gra/main.cpp C:/SFML-2.5.1/include/SFML/Window.hpp \
 		C:/SFML-2.5.1/include/SFML/Graphics/VertexBuffer.hpp \
 		C:/SFML-2.5.1/include/SFML/OpenGL.hpp \
 		../Gra/ksztalt.hpp \
-		../Gra/kwadrat.hpp
+		../Gra/kwadrat.hpp \
+		../Gra/ustalone.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ..\Gra\main.cpp
 
 ####### Install
